--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Regna Bootstrap Template</title>
+  <title>Dillo.zip</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -113,7 +113,7 @@
       <div class="container" data-aos="fade-up">
         <div class="section-header">
           <h3 class="section-title">Ci presentiamo</h3>
-          <p class="section-description">Ciao, siamo Claudia e Giulia e insieme abbiamo pensato di creare Dillo.zip. Dillo.zip nasce dal bisogno di confrontarsi, connettendo una rete di persone che vogliono esprimere la propria opinione nel rispetto altrui. Il nostro scopo è quello di poter dialogare insieme a voi promuovendo la condivisione di diversi punti di vista.
+          <p class="section-description">Ciao, siamo Claudia e Giulia e insieme abbiamo pensato di creare Dillo.zip. Nasce dal bisogno di confrontarsi, connettendo una rete di persone che vogliono esprimere la propria opinione nel rispetto altrui. Il nostro scopo è quello di poter dialogare insieme a voi promuovendo la condivisione di diversi punti di vista.
 </p>
         </div>
        
