--- a/index.html
+++ b/index.html
@@ -91,9 +91,10 @@
       <div class="container" data-aos="fade-up">
         <div class="row about-container">
 
-          <div class="col-lg-6 content order-lg-1 order-2">
+          <div class="col-lg-12 content order-lg-1 order-2">
             
             <img src="assets/img/manifest2.png" class="manifest" alt="">
+			    <img src="assets/img/maniorizz.png" class="manifestorizz" alt="">
 
           
 
